<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.AppWidget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppWidget.AppWidgetContainer.WeatherForecast">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/widget_element_min_length"
        android:orientation="horizontal">

        <ImageView
            style="@style/Widget.AppWidget.ImageView.WeatherIcon"
            android:layout_width="@dimen/widget_element_min_length"
            android:layout_height="@dimen/widget_element_min_length"
            android:contentDescription="@string/icon_for_weather_content_description"
            android:src="@drawable/ic_partly_cloudy" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="@dimen/widget_element_min_length"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="bottom"
                android:text="@string/city_tokyo" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/widget_element_min_length"
                android:layout_gravity="end"
                android:gravity="top"
                android:text="@string/mostly_cloudy" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/widget_weather_forecast_region_temperature_coming_hours" />

    <LinearLayout
        style="@style/Widget.AppWidget.AppWidget.InnerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/tuesday"
                android:textStyle="bold" />

            <ImageView
                style="@style/Widget.AppWidget.ImageView.WeatherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon_for_weather_content_description"
                android:src="@drawable/ic_sunny" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:minHeight="@dimen/widget_element_min_length"
                android:text="@string/degree_15" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/widget_element_min_length"
                android:text="@string/degree_11" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/wednesday"
                android:textStyle="bold" />

            <ImageView
                style="@style/Widget.AppWidget.ImageView.WeatherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon_for_weather_content_description"
                android:src="@drawable/ic_rainy" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:minHeight="@dimen/widget_element_min_length"
                android:text="@string/degree_16" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/widget_element_min_length"
                android:text="@string/degree_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/thursday"
                android:textStyle="bold" />

            <ImageView
                style="@style/Widget.AppWidget.ImageView.WeatherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon_for_weather_content_description"
                android:src="@drawable/ic_partly_cloudy" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:minHeight="@dimen/widget_element_min_length"
                android:text="@string/degree_13" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/widget_element_min_length"
                android:text="@string/degree_10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/friday"
                android:textStyle="bold" />

            <ImageView
                style="@style/Widget.AppWidget.ImageView.WeatherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/icon_for_weather_content_description"
                android:src="@drawable/ic_sunny" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:minHeight="@dimen/widget_element_min_length"
                android:text="@string/degree_17" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/widget_element_min_length"
                android:text="@string/degree_12" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>