<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.AppWidget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppWidget.AppWidgetContainer.WeatherForecast">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="@dimen/widget_element_min_length" >

        <ImageView
            style="@style/Widget.AppWidget.ImageView.WeatherIcon"
            android:layout_width="@dimen/widget_element_min_length"
            android:layout_height="@dimen/widget_element_min_length"
            android:contentDescription="@string/icon_for_weather_content_description"
            android:src="@drawable/ic_partly_cloudy" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:minHeight="@dimen/widget_element_min_length" >

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="bottom"
                android:text="@string/city_tokyo" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/widget_element_min_length"
                android:layout_gravity="end"
                android:gravity="top"
                android:text="@string/mostly_cloudy" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/widget_weather_forecast_region_temperature_coming_hours" />
</LinearLayout>